# Bitterbot-Core

./: .gitignore  .vercelignore  BitterBot_Unified_Structure_Documentation.html  CLAUDE_EMERGENCY_SAVE.md  README.md  add_creator_users.sql  add_users_to_creator_tier.sql  vercel.json
.claude/: settings.local.json
BitterBot_Unified_AGI_Platform/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
BitterBot_Unified_AGI_Platform/src/protocol_layer/: Cargo.toml
BitterBot_Unified_AGI_Platform/src/protocol_layer/src/: lib.rs
BitterBot_Unified_AGI_Platform/src/protocol_layer/src/discovery/: mod.rs  network_topology.rs  peer_discovery.rs  service_registry.rs
BitterBot_Unified_AGI_Platform/src/protocol_layer/src/orchestrator/: coordination_engine.rs  mod.rs  resource_manager.rs  task_scheduler.rs
BitterBot_Unified_AGI_Platform/src/protocol_layer/src/shared/: crypto.rs  error.rs  mod.rs  types.rs  utils.rs
BitterBot_Unified_AGI_Platform/src/protocol_layer/src/validator/: consensus_engine.rs  mod.rs  proof_validator.rs  reputation_system.rs
BitterBot_Unified_AGI_Platform/src/protocol_layer/src/worker/: health_reporter.rs  mod.rs  resource_monitor.rs  task_executor.rs
backend/: .env.example  PROJECT_SUMMARY.md  README.md  RUN_MIGRATIONS.md  TOOL_CACHING.md  api.py  docker-compose.yml  list_mcp.py  pyproject.toml  requirements.txt  run_agent_background.py  run_engram_migration.py  test_anthropic_features.py  test_engram_system.py  test_langfuse_import.py
bitterbot/: memory_integration_example.py
bitterbot_Research_Workspace/: __init__.py  test_memory_imports.py
frontend/: .env.example  .gitignore  README.md  api-endpoint-analysis.md  next.config.ts  (+2 more)
(+173 files in other folders)
