[package]
name = "bitterbot-protocol"
version = "0.1.0"
edition = "2021"
authors = ["BitterBot Team"]
description = "Decentralized protocol infrastructure for BitterBot AGI Platform"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "kad", "gossipsub", "identify", "ping"] }
quinn = "0.10"  # QUIC protocol

# Cryptography
ring = "0.17"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"

# Consensus
raft = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
futures = "0.3"
once_cell = "1.19"

# Metrics
prometheus = "0.13"

# Configuration
config = "0.13"

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"

[[bin]]
name = "orchestrator"
path = "src/bin/orchestrator.rs"

[[bin]]
name = "validator"
path = "src/bin/validator.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "discovery"
path = "src/bin/discovery.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1